# fe-pie-app

./: .gitignore  .gitlab-ci.yml  README.md  app.py  cypress.config.js  package-lock.json  package.json  poetry.toml  pyproject.toml
.gitlab/merge_request_templates/: default.md
cypress/e2e/: example.cy.js
cypress/plugins/: index.js
static/css/: styles.css
static/js/: app.js  popper-1.16.0.min.js
templates/: base.html  collapse-example.html  engdeu.html  index.html  proto.html
tests/: example.test.js
