[tool.poetry]
name = "fe-cf-app"
version = "0.1.0"
description = "frontend for cash flows generator apps"
authors = ["Maxim Litvak <maxim.litvak@gmail.com>"]

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
Flask = "2.2.5"
flask-babel = "^4.0.0"
flask-cors = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
